Inclusion of QueueServer

--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -1,11 +1,11 @@
 Configuration MiddlewareProducer :=
    Components
       srh : SRH
-      qm  : QueueServer    @QUEUESERVER_PORT
+      qs  : QueueingService    @QUEUESERVER_PORT
 
    Connectors
       t1 : RequestReply
 
    Attachments
-      srh,t1,qm
+      srh,t1,qs
 EndConf
