Inclusion of "Repository"

--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -1,4 +1,4 @@
-Configuration MiddlewareProducer :=
+Configuration MiddlewareQueueServer :=
    Components
       srh : SRH
       qs  : QueueingService    @QUEUESERVER_PORT
