Adjusts on MIOP

--- a/src/apps/conf/MiddlewareProducer.conf
+++ b/src/apps/conf/MiddlewareProducer.conf
@@ -1,6 +1,6 @@
 Configuration MiddlewareProducer :=
    Components
-      queueManagerProxy : QueueManagerClientProxy
+      queueManagerProxy : QueueingClientProxy
       crh               : CRH
 
    Connectors
