Adjust Queueing server

--- a/src/apps/conf/MiddlewareProducer.conf
+++ b/src/apps/conf/MiddlewareProducer.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareProducer :=
    Components
       queueManagerProxy : QueueingClientProxy
-      crh               : CRH    @QUEUEING_PORT
+      crh               : CRH
 
    Connectors
       t1 : RequestReply
