--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -1,11 +1,14 @@
 Configuration MiddlewareQueueServer :=
    Components
-      srh : SRH
-      qs  : QueueingService    @QUEUESERVER_PORT
+      queueing: QueueingService
+      invoker : QueueingInvoker
+      srh     : SRH           @QUEUEING_PORT
 
    Connectors
       t1 : RequestReply
+      t2 : RequestReply
 
    Attachments
-      srh,t1,qs
+      srh,t1,invoker
+      invoker,t2,queueing
 EndConf
