New Adjusts on Queueing server

--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -2,7 +2,7 @@ Configuration MiddlewareQueueServer :=
    Components
       queueing: QueueingService
       invoker : QueueingInvoker
-      srh     : SRH           @QUEUESERVER_PORT
+      srh     : SRH           @QUEUEING_PORT
 
    Connectors
       t1 : RequestReply
