New Adjusts on Queueing server

--- a/src/apps/conf/MiddlewareFibonacciClient.conf
+++ b/src/apps/conf/MiddlewareFibonacciClient.conf
@@ -1,4 +1,8 @@
 Configuration MiddlewareFibonacciClient :=
+
+   Adaptability
+         IS_ADAPTIVE : false
+
    Components 
       namingProxy     : NamingClientProxy
       fibonacciProxy  : FibonacciClientProxy
