--- a/src/apps/conf/MiddlewareFibonacciServer.conf
+++ b/src/apps/conf/MiddlewareFibonacciServer.conf
@@ -1,4 +1,8 @@
 Configuration MiddlewareFibonacciServer :=
+
+   Adaptability
+      IS_ADAPTIVE : false
+
    Components 
       namingProxy      : NamingClientProxy
       fibonacciInvoker : FibonacciInvoker
