--- a/src/apps/conf/MiddlewareNamingServer.conf
+++ b/src/apps/conf/MiddlewareNamingServer.conf
@@ -1,4 +1,8 @@
 Configuration MiddlewareNamingServer :=
+
+  Adaptability
+      IS_ADAPTIVE : false
+
    Components 
       naming  : NamingService
       invoker : NamingInvoker
