--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -1,4 +1,8 @@
 Configuration MiddlewareQueueServer :=
+
+   Adaptability
+      IS_ADAPTIVE : false
+
    Components
       queueing: QueueingService
       invoker : QueueingInvoker
