--- a/src/apps/conf/MiddlewareQueueingClient.conf
+++ b/src/apps/conf/MiddlewareQueueingClient.conf
@@ -1,4 +1,8 @@
 Configuration MiddlewareQueueingClient :=
+
+   Adaptability
+      IS_ADAPTIVE : false
+
    Components
       queueingProxy : QueueingClientProxy
       requestor     : Requestor
