Improvements on Control

--- a/src/apps/conf/SenderReceiver.conf
+++ b/src/apps/conf/SenderReceiver.conf
@@ -8,7 +8,7 @@ Configuration SenderReceiver :=
       receiver : Receiver
 
    Connectors
-      t1 : RequestReply
+      t1 : OneWay
 
    Attachments
       sender,t1,receiver
