New Execution Environment complete (complete graph)

--- a/src/apps/conf/MiddlewareFibonacciClient.conf
+++ b/src/apps/conf/MiddlewareFibonacciClient.conf
@@ -4,8 +4,8 @@ Configuration MiddlewareFibonacciClient :=
          IS_ADAPTIVE : false
 
    Components 
-      namingProxy     : NamingClientProxy
-      fibonacciProxy  : FibonacciClientProxy
+      namingproxy     : NamingClientProxy
+      fibonacciproxy  : FibonacciClientProxy
       requestor       : Requestor
       crh             : CRH
 
@@ -14,7 +14,7 @@ Configuration MiddlewareFibonacciClient :=
       t2 : RequestReply
 
    Attachments
-      namingProxy,t1,requestor
-      fibonacciProxy,t1,requestor
+      namingproxy,t1,requestor
+      fibonacciproxy,t1,requestor
       requestor,t2,crh
 EndConf
