--- a/src/apps/conf/MiddlewareFibonacciServer.conf
+++ b/src/apps/conf/MiddlewareFibonacciServer.conf
@@ -4,8 +4,8 @@ Configuration MiddlewareFibonacciServer :=
       IS_ADAPTIVE : false
 
    Components 
-      namingProxy      : NamingClientProxy
-      fibonacciInvoker : FibonacciInvoker
+      namingproxy      : NamingClientProxy
+      fibonacciinvoker : FibonacciInvoker
       requestor        : Requestor
       crh              : CRH    @NAMING_PORT
       srh              : SRH    @FIBONACCI_PORT
@@ -16,7 +16,7 @@ Configuration MiddlewareFibonacciServer :=
       t3 : RequestReply
 
    Attachments
-      namingProxy,t1,requestor
+      namingproxy,t1,requestor
       requestor,t2,crh
-      srh,t3,fibonacciInvoker
+      srh,t3,fibonacciinvoker
 EndConf 
