--- a/src/apps/conf/MiddlewareNamingServer.conf
+++ b/src/apps/conf/MiddlewareNamingServer.conf
@@ -4,12 +4,12 @@ Configuration MiddlewareNamingServer :=
       IS_ADAPTIVE : false
 
    Components
-      invoker : NamingInvoker
-      srh     : SRH           @NAMING_PORT
+      naminginvoker : NamingInvoker
+      srh           : SRH           @NAMING_PORT
 
    Connectors
       t1 : RequestReply
 
    Attachments
-      srh,t1,invoker
+      srh,t1,naminginvoker
 EndConf 
