Adaptation Manager fixed to work with the new Execution Engine

--- a/src/apps/conf/MiddlewareFibonacciServer.conf
+++ b/src/apps/conf/MiddlewareFibonacciServer.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareFibonacciServer :=
 
    Adaptability
-      IS_ADAPTIVE : false
+      IS_ADAPTIVE : true
 
    Components 
       namingproxy      : NamingClientProxy
