--- a/src/apps/conf/MiddlewareQueueingClient.conf
+++ b/src/apps/conf/MiddlewareQueueingClient.conf
@@ -4,15 +4,15 @@ Configuration MiddlewareQueueingClient :=
       IS_ADAPTIVE : false
 
    Components
-      queueingProxy : QueueingClientProxy
-      requestor     : Requestor
-      crh           : CRH
+      proxy     : QueueingClientProxy
+      requestor : Requestor
+      crh       : CRH
 
    Connectors
       t1 : RequestReply
       t2 : RequestReply
 
    Attachments
-      queueingProxy,t1,requestor
+      proxy,t1,requestor
       requestor,t2,crh
 EndConf
