Improvements on Adaptability

--- a/src/apps/conf/SenderReceiver.conf
+++ b/src/apps/conf/SenderReceiver.conf
@@ -1,8 +1,5 @@
 Configuration SenderReceiver :=
 
-   Adaptability
-      IS_ADAPTIVE : false
-
    Components
       sender   : Sender
       receiver : Receiver
@@ -12,4 +9,8 @@ Configuration SenderReceiver :=
 
    Attachments
       sender,t1,receiver
+
+   Adaptability
+      Evolutive
+
 EndConf
