Improvements on Adaptability (fix Local Loop bug)

--- a/src/apps/conf/MiddlewareFibonacciClient.conf
+++ b/src/apps/conf/MiddlewareFibonacciClient.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareFibonacciClient :=
 
    Adaptability
-         IS_ADAPTIVE : false
+         None
 
    Components 
       namingproxy     : NamingClientProxy
