--- a/src/apps/conf/MiddlewareNamingServer.conf
+++ b/src/apps/conf/MiddlewareNamingServer.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareNamingServer :=
 
   Adaptability
-      IS_ADAPTIVE : false
+      None
 
    Components
       naminginvoker : NamingInvoker
