New version - Fibonacci correct

--- a/src/apps/conf/MiddlewareFibonacciServer.conf
+++ b/src/apps/conf/MiddlewareFibonacciServer.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareFibonacciServer :=
 
    Adaptability
-      Evolutive
+      None
 
    Components 
       namingproxy      : NamingClientProxy
