New version - MOM updated

--- a/src/apps/conf/MiddlewareQueueServer.conf
+++ b/src/apps/conf/MiddlewareQueueServer.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareQueueServer :=
 
    Adaptability
-      IS_ADAPTIVE : false
+      None
 
    Components
       queueserver : QueueingServer
