--- a/src/apps/conf/MiddlewareQueueingClient.conf
+++ b/src/apps/conf/MiddlewareQueueingClient.conf
@@ -1,7 +1,7 @@
 Configuration MiddlewareQueueingClient :=
 
    Adaptability
-      IS_ADAPTIVE : false
+      NONE
 
    Components
       proxy     : QueueingClientProxy
