First version of a "Subscriber"

--- a/src/apps/confs/MiddlewareQueueingClient.conf
+++ b/src/apps/confs/MiddlewareQueueingClient.conf
@@ -4,7 +4,7 @@ Configuration MiddlewareQueueingClient :=
       NONE
 
    Components
-      proxy     : QueueingClientProxy
+      proxy     : NotificationEngineClientProxy
       requestor : Requestor
       crh       : CRH
 
