Last version before choice with internal actions

--- a/src/apps/confs/QueueServer.conf
+++ b/src/apps/confs/QueueServer.conf
@@ -4,7 +4,7 @@ Configuration QueueServer :=
       None
 
    Components
-//      manager  : SubscripitionManager
+//      manager  : SubscriptionManager
 //      notifier : NotificationConsumer
       engine   : NotificationEngine
       invoker  : NotificationEngineInvoker
