New adjusts on the 'choice'

--- a/src/apps/confs/QueueServer.conf
+++ b/src/apps/confs/QueueServer.conf
@@ -13,11 +13,12 @@ Configuration QueueServer :=
    Connectors
       t1 : RequestReply
       t2 : RequestReply
-//      t3 : 1ToN
+//      t3 : RequestReply
+//      t4 : RequestReply
 
    Attachments
       srh,t1,invoker
       invoker,t2,engine
-//      engine,t3,notifier
 //      engine,t3,manager
+//      engine,t4,notifier
 EndConf
