--- a/src/apps/confs/SenderReceiver.conf
+++ b/src/apps/confs/SenderReceiver.conf
@@ -3,9 +3,11 @@ Configuration SenderReceiver :=
    Components
       sender   : Sender
       receiver : Receiver
+      monitor  : MAPEKMonitor
 
    Connectors
       t1 : OneWay
+      t2 : OneWay
 
    Attachments
       sender,t1,receiver
