EE like an architecture

--- a/src/apps/confs/MAPEK.conf
+++ b/src/apps/confs/MAPEK.conf
@@ -11,12 +11,14 @@ Configuration MAPEK :=
       analyser         : MAPEKAnalyser
       planner          : MAPEKPlanner
       executor         : MAPEKExecutor
+      unit             : ExecutionUnit
 
    Connectors
       t1 : ThreeToOne
       t2 : OneWay
       t3 : OneWay
       t4 : OneWay
+      t5 : OneWay
 
    Attachments
       correctiveMonitor,t1,monitor
@@ -25,4 +27,5 @@ Configuration MAPEK :=
       monitor,t2,analyser
       analyser,t3,planner
       planner,t4,executor
+      executor,t5,unit
 EndConf
