EE like an architecture - Working (SenderReceiver.conf)

--- a/src/apps/confs/ExecutionEnvironment.conf
+++ b/src/apps/confs/ExecutionEnvironment.conf
@@ -5,11 +5,17 @@ Configuration ExecutionEnvironment :=
 
    Components
       ee   : ExecutionEnvironment
-      unit : ExecutionUnit
+      unit1 : ExecutionUnit
+      unit2 : ExecutionUnit
+      unit3 : ExecutionUnit
 
    Connectors
       t1 : OneWay
+      t2 : OneWay
+      t3 : OneWay
 
    Attachments
-      ee,t1,unit
+      ee,t1,unit1
+      ee,t2,unit2
+      ee,t3,unit3
 EndConf
