--- a/src/apps/confs/ExecutionEnvironment.conf
+++ b/src/apps/confs/ExecutionEnvironment.conf
@@ -4,18 +4,31 @@ Configuration ExecutionEnvironment :=
       None
 
    Components
-      ee   : ExecutionEnvironment
-      unit1 : ExecutionUnit
-      unit2 : ExecutionUnit
-      unit3 : ExecutionUnit
+      ee               : ExecutionEnvironment
+      unit1            : ExecutionUnit
+      unit2            : ExecutionUnit
+      unit3            : ExecutionUnit
+      evolutiveMonitor : EvolutiveMonitor
+      mapekMonitor     : MAPEKMonitor
+      analyser         : MAPEKAnalyser
+      planner          : MAPEKPlanner
+      executor         : MAPEKExecutor
 
    Connectors
-      t1 : OneWay
+      t1 : OneTo3
       t2 : OneWay
       t3 : OneWay
+      t4 : OneWay
+      t5 : OneWay
+      t6 : OneWay
 
    Attachments
       ee,t1,unit1
-      ee,t2,unit2
-      ee,t3,unit3
+      ee,t1,unit2
+      ee,t1,unit3
+      evolutiveMonitor,t2,mapekMonitor
+      mapekMonitor,t3,analyser
+      analyser,t4,planner
+      planner,t5,executor
+      executor,t6,ee
 EndConf
