New version of EE tested with SenderReceiver (new improvements)

--- a/src/apps/confs/ExecutionEnvironment.conf
+++ b/src/apps/confs/ExecutionEnvironment.conf
@@ -8,7 +8,7 @@ Configuration ExecutionEnvironment :=
       unit1            : ExecutionUnit
       unit2            : ExecutionUnit
       unit3            : ExecutionUnit
-      evolutiveMonitor : EvolutiveMonitor
+      evolutiveMonitor : MAPEKEvolutiveMonitor
       mapekMonitor     : MAPEKMonitor
       analyser         : MAPEKAnalyser
       planner          : MAPEKPlanner
